--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,9 +16,9 @@
         <Button x:Name="Botonrando" Content="RANDOMIZE EVOLUTION" HorizontalAlignment="Left" Height="96" Margin="35,290,0,0" VerticalAlignment="Top" Width="387" FontSize="20" FontWeight="Bold" Click="Botonrando_Click"/>
         <ComboBox x:Name="BoxtopeDevos" HorizontalAlignment="Left" Height="38" Margin="24,92,0,0" VerticalAlignment="Top" Width="42" FontSize="22" FontFamily="Aller" SelectedIndex="0"/>
         <ComboBox x:Name="BoxtopeEvos" HorizontalAlignment="Left" Height="38" Margin="24,28,0,0" VerticalAlignment="Top" Width="42" SelectedIndex="0" FontFamily="Aller" FontWeight="Bold" FontSize="22"/>
-        <TextBlock HorizontalAlignment="Left" Height="52" Margin="80,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="18" FontFamily="Aller" FontWeight="Bold"><Run Language="es-es" Text="Maximum number of evolutions."/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Height="50" Margin="80,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="18" FontFamily="Aller" FontWeight="Bold"><Run Text="Maximum number of "/><Run Language="es-es" Text="d"/><Run Text="evolutions."/></TextBlock>
-        <CheckBox x:Name="Botoncillodelcaos" Content="Chaos mode &#xD;&#xA;Evos can be any level." HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="137" Margin="85,170,0,0" FontFamily="Aller" RenderTransformOrigin="0.624,0.439" FontSize="9">
+        <TextBlock HorizontalAlignment="Left" Height="52" Margin="80,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="18" FontFamily="Calibri" FontWeight="Bold" FontStyle="Italic"><Run Language="es-es" Text="Maximum number of evolutions."/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Height="50" Margin="80,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="18" FontFamily="Calibri" FontWeight="Bold" FontStyle="Italic"><Run Text="Maximum number of "/><Run Language="es-es" Text="d"/><Run Text="evolutions."/></TextBlock>
+        <CheckBox x:Name="Botoncillodelcaos" Content="Chaos mode &#xD;&#xA;Evos can be any level." HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="137" Margin="85,170,0,0" FontFamily="Calibri" RenderTransformOrigin="0.624,0.439" FontSize="9" FontWeight="Bold" FontStyle="Italic">
             <CheckBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="2" ScaleY="2"/>
@@ -28,7 +28,7 @@
                 </TransformGroup>
             </CheckBox.RenderTransform>
         </CheckBox>
-        <CheckBox x:Name="Botoncillodelrepe" Content="Randomize number of evos.&#xD;&#xA;(between 1 and max number)" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="145" Margin="90,229,0,0" FontFamily="Aller" RenderTransformOrigin="0.624,0.439" FontSize="9">
+        <CheckBox x:Name="Botoncillodelrepe" Content="Randomize number of evos.&#xD;&#xA;(between 1 and max number)" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="145" Margin="90,229,0,0" FontFamily="Calibri" RenderTransformOrigin="0.624,0.439" FontSize="9" FontWeight="Bold" FontStyle="Italic">
             <CheckBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="2" ScaleY="2"/>
@@ -38,7 +38,7 @@
                 </TransformGroup>
             </CheckBox.RenderTransform>
         </CheckBox>
-        <TextBlock HorizontalAlignment="Left" Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" Margin="80,398,0,0" FontFamily="Aller" FontSize="16" FontWeight="Bold" Foreground="#FFF9F9F9"><Run Language="es-es" Text="Randomizer by LoudKuyuki , Tool by Uzuhenry"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" Margin="80,398,0,0" FontFamily="Calibri" FontSize="16" FontWeight="Bold" Foreground="#FFF9F9F9"><Run Language="es-es" Text="Randomizer by LoudKuyuki , Tool by Uzuhenry"/></TextBlock>
 
     </Grid>
 </Window>
